--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,5 @@
 
+<h1>Create a Team and Heroes!</h1>
+
+<label for="team_name">Team Name: </label><input type="text">
+<label for="team_motto">Team Motto: </label><input type="text">
