automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,3 +3,20 @@
 
 <label for="team_name">Team Name: </label><input type="text">
 <label for="team_motto">Team Motto: </label><input type="text">
+
+<h2>Hero 1</h2>
+<label for="member1_name">Hero's Name: </label><input type="text">
+<label for="member1_power">Hero's Power: </label><input type="text">
+<label for="member1_bio">Hero's Biography: </label><input type="text">
+
+<h2>Hero 2</h2>
+<label for="member2_name">Hero's Name: </label><input type="text">
+<label for="member2_power">Hero's Power: </label><input type="text">
+<label for="member2_bio">Hero's Biography: </label><input type="text">
+
+<h2>Hero 3</h2>
+<label for="member3_name">Hero's Name: </label><input type="text">
+<label for="member3_power">Hero's Power: </label><input type="text">
+<label for="member3_bio">Hero's Biography: </label><input type="text">
+
+<input type="submit" value="submit">
