--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -6,7 +6,7 @@
 
 <h2>Hero 1</h2>
 <label for="member1_name">Hero's Name: </label><input type="text" id="member1_name">
-<label for="member1_power">Hero's Power: </label><input type="text">
+<label for="member1_power">Hero's Power: </label><input type="text" id="member1_power">
 <label for="member1_bio">Hero's Biography: </label><input type="text">
 
 <h2>Hero 2</h2>
