--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -7,16 +7,16 @@
 <h2>Hero 1</h2>
 <label for="member1_name">Hero's Name: </label><input type="text" id="member1_name">
 <label for="member1_power">Hero's Power: </label><input type="text" id="member1_power">
-<label for="member1_bio">Hero's Biography: </label><input type="text">
+<label for="member1_bio">Hero's Biography: </label><input type="text" id="member1_bio">
 
 <h2>Hero 2</h2>
 <label for="member2_name">Hero's Name: </label><input type="text" id="member2_name">
-<label for="member2_power">Hero's Power: </label><input type="text">
-<label for="member2_bio">Hero's Biography: </label><input type="text">
+<label for="member2_power">Hero's Power: </label><input type="text" id="member2_power">
+<label for="member2_bio">Hero's Biography: </label><input type="text" id="member2_bio">
 
 <h2>Hero 3</h2>
 <label for="member3_name">Hero's Name: </label><input type="text" id="member3_name">
-<label for="member3_power">Hero's Power: </label><input type="text">
-<label for="member3_bio">Hero's Biography: </label><input type="text">
+<label for="member3_power">Hero's Power: </label><input type="text" id="member3_power">
+<label for="member3_bio">Hero's Biography: </label><input type="text" id="member3_bio">
 
 <input type="submit" value="submit">
