--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,6 +1,6 @@
 
 <h1>Create a Team and Heroes!</h1>
-
+<form>
 <label for="team_name">Team Name: </label><input type="text">
 <label for="team_motto">Team Motto: </label><input type="text">
 
@@ -20,3 +20,4 @@
 <label for="member3_bio">Hero's Biography: </label><input type="text" id="member3_bio">
 
 <input type="submit" value="submit">
+</form>
