automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,18 @@
+<h1>Flatiron</h1>
 
+<h2>Team Motto: <%= Some erb shit probably %></h2>
 
+<h2>Hero Name: <%= Some erb shit probably %></h2>
 
+<p>Hero Power: <%= Some erb shit probably %></p>
+<p>Hero Biography: <%= Some erb shit probably %></p>
+
+<h2>Hero Name: <%= Some erb shit probably %></h2>
+
+<p>Hero Power: <%= Some erb shit probably %></p>
+<p>Hero Biography: <%= Some erb shit probably %></p>
+
+<h2>Hero Name: <%= Some erb shit probably %></h2>
+
+<p>Hero Power: <%= Some erb shit probably %></p>
+<p>Hero Biography: <%= Some erb shit probably %></p>
