--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -2,8 +2,8 @@
 <h1>Create a Team and Heroes!</h1>
 
 <form method="post" action="/teams">
-  <label for="team_name">Team Name: </label><input type="text">
-  <label for="team_motto">Team Motto: </label><input type="text">
+  <label for="team_name">Team Name: </label><input id="team_name" type="text">
+  <label for="team_motto">Team Motto: </label><input id="team_motto" type="text">
 
   <h2>Hero 1</h2>
   <label for="member1_name">Hero's Name: </label><input id="member1_name" type="text" >
