automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h1>Flatiron</h1>
 
-<h2>Team Motto: <%= Some erb shit probably %></h2>
+<h2>Team Motto: <%= params[] %></h2>
 
 <h2>Hero Name: <%= Some erb shit probably %></h2>
 
