automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,18 +1,18 @@
 <h1>Flatiron</h1>
 
-<h2>Team Motto: <%= params[] %></h2>
+<h2>Team Motto: <%= @team_motto %></h2>
 
-<h2>Hero Name: <%= Some erb shit probably %></h2>
+<h2>Hero Name: <%= @hero1_name %></h2>
 
-<p>Hero Power: <%= Some erb shit probably %></p>
-<p>Hero Biography: <%= Some erb shit probably %></p>
+<p>Hero Power: <%= @hero1_power %></p>
+<p>Hero Biography: <%= @hero1_bio %></p>
 
-<h2>Hero Name: <%= Some erb shit probably %></h2>
+<h2>Hero Name: <%= @hero2_name %></h2>
 
-<p>Hero Power: <%= Some erb shit probably %></p>
-<p>Hero Biography: <%= Some erb shit probably %></p>
+<p>Hero Power: <%= @hero2_power %></p>
+<p>Hero Biography: <%= @hero2_bio %></p>
 
-<h2>Hero Name: <%= Some erb shit probably %></h2>
+<h2>Hero Name: <%= @hero3_name %></h2>
 
-<p>Hero Power: <%= Some erb shit probably %></p>
-<p>Hero Biography: <%= Some erb shit probably %></p>
+<p>Hero Power: <%= @hero3_power %></p>
+<p>Hero Biography: <%= @hero3_bio %></p>
